--- a/src/features/quote/components/Quote/FormFields/MultilineTextField/styles.module.css
+++ b/src/features/quote/components/Quote/FormFields/MultilineTextField/styles.module.css
@@ -3,7 +3,6 @@
   display: flex;
   align-items: flex-start;
   width: 100%;
-  margin-bottom: 16px;
   gap: 16px;
 }
 
